--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mu-addon-authorization",
-  "version": "0.1.2",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.1.3",
+  "description": "adds a 'manage-authorizations' component",
   "directories": {
     "doc": "doc",
     "test": "tests"
