--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mu-addon-authorization",
   "version": "0.1.6",
-  "description": "adds a 'manage-authorizations' component",
+  "description": "Default ember component for mu-authorization-service. See http://mu.semte.ch/.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +11,14 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mu-semtech/authorization-ember-addon"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Jonathan Langens <flowofcontrol@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
@@ -38,7 +41,8 @@
     "ember-try": "~0.0.8"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "mu-semtech"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.5",
