--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "mu-addon-authorization",
+  "name": "ember-mu-authorization",
   "dependencies": {
     "ember": "1.13.11",
     "ember-cli-shims": "0.0.6",
